<resources>
    <string name="errors1">An error appeared (x</string>
    <string name="errors2">) Error code: </string>
    <string name="mountSuccess">Successfully mounted: </string>
    <string name="obbDetected">Found %1$d obb files\nObb format: %2$s</string>
    <string name="appName">OBB Cache Extractor</string>
    <string name="unpackSuccess">Successfully unpacked (%1$d/%2$d) images</string>
    <string name="unpackError">Unable to unpack the images due to I/O errors…</string>
    <string name="unpackingInProgress">"Unpacking OBB ("</string>
    <string name="backgroundWorkerActive">"Unpacking is in progress. Please wait…"</string>
    <string name="mainActivityTitle">OBB Unpacker</string>
    <string name="firstFragmentLabel">OBB Image Extractor</string>
    <string name="selectFolder">Select</string>
    <string name="unpack">Unpack</string>
    <string name="copyCompatibility">Compatibility mode</string>
    <string name="selectUnpackDir">Select a directory for unpacked files</string>
    <string name="selectObbDir">Select a directory with OBB files</string>
    <string name="Android11Detected">Android 11+ detected\n Click here to give permission to access data in Android/obb.</string>
    <string name="VMOSDetected">This application does not work inside VMOS.</string>
    <string name="modwarning">Warning! Original obb files will be deleted.</string>
    <string name="cantReadObbFolder">Cannot access selected OBB folder. Try moving files to other folder.</string>
    <string name="zipFolder">ZIP-archive</string>
    <string name="jobbImage">Disk image</string>
    <string name="unknown">Unknown</string>
    <string name="noPassword">No password</string>
    <string name="noOwnObbDir">Unable to create obb folder for this app. For Android 11+ unknown sources permission can help.</string>
</resources>