<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/selectObbDir"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_first">

        <Button
            android:id="@+id/button_first"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_24dp"
            android:shadowColor="#00000000"
            android:text="@string/selectFolder"
            android:textColor="@color/mu_primary"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="211dp" />

        <EditText
            android:id="@+id/obbFolderPath"
            android:layout_width="246dp"
            android:layout_height="54dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:theme="@style/EditTextCustom"
            app:layout_constraintBottom_toBottomOf="@+id/button_first"
            app:layout_constraintStart_toEndOf="@+id/button_first"
            app:layout_constraintTop_toTopOf="@+id/button_first"
            app:layout_constraintVertical_bias="0.0" />
    </LinearLayout>

    <EditText
        android:id="@+id/unpackedFolderPath"
        android:layout_width="246dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:theme="@style/EditTextCustom"
        app:layout_constraintBottom_toBottomOf="@+id/button_unpacked"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toEndOf="@+id/button_unpacked"
        app:layout_constraintTop_toTopOf="@+id/button_unpacked"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/unpackTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/selectUnpackDir"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_first" />

    <Button
        android:id="@+id/button_unpacked"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_button_24dp"
        android:text="@string/selectFolder"
        android:textColor="@color/mu_primary"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/unpackTextView" />

    <Button
        android:id="@+id/buttonUnpack"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button_24dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/unpack"
        android:textColor="@color/mu_primary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unpackedFolderPath"
        app:layout_constraintVertical_bias="0.184" />

    <TextView
        android:id="@+id/obbFoundText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/textview_first"
        app:layout_constraintStart_toStartOf="@+id/textview_first"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/statusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:maxLines="3"
        android:singleLine="false"
        android:text="@string/modwarning"
        android:textAlignment="center"
        android:textColor="@color/mu_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/ProgressBarCustom"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/statusText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/altCopy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/copyCompatibility"
        android:textColor="@color/mu_secondary"
        android:textSize="10sp"
        android:theme="@style/CheckBoxCustom"
        app:layout_constraintEnd_toEndOf="@+id/buttonUnpack"
        app:layout_constraintStart_toStartOf="@+id/buttonUnpack"
        app:layout_constraintTop_toBottomOf="@+id/buttonUnpack" />

    <TextView
        android:id="@+id/androidEleven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Android11Detected"
        android:textAlignment="center"
        android:textColor="#F8B49F"
        android:textSize="12sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/altCopy"
        app:layout_constraintStart_toStartOf="@+id/altCopy"
        app:layout_constraintTop_toBottomOf="@+id/altCopy" />

    <TextView
        android:id="@+id/noVMOS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/VMOSDetected"
        android:textAlignment="center"
        android:textColor="#FF0000"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/androidEleven"
        app:layout_constraintStart_toStartOf="@+id/androidEleven"
        app:layout_constraintTop_toBottomOf="@+id/androidEleven" />

    <EditText
        android:id="@+id/obbKeyInput"
        android:layout_width="136dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/noPassword"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="12sp"
        android:theme="@style/EditTextCustom"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/buttonUnpack"
        app:layout_constraintEnd_toEndOf="@+id/buttonUnpack"
        app:layout_constraintStart_toStartOf="@+id/buttonUnpack" />


</android.support.constraint.ConstraintLayout>